--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,34 @@
-.box {
-    border: 4px solid lightgray;
-    width: 100px;
-    height: 100px;
-}
-
-.box-small {
-    width: 50px;
-    height: 50px;
-    margin-left: 24px;
-}
-
-.box-wrapper {
-    display: flex;
-    align-items: center;
+* {
+    box-sizing: border-box;
 }
 
 .container {
     border: 4px solid lightgray;
-    display: flex;
-    justify-content: space-between;
     padding: 24px;
+}
+
+.row {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.title {
+    border: 2px solid lightgray;
+    width: 100%;
+    height: 24px;
+    margin-bottom: 24px;
+}
+
+.box {
+    border: 4px solid lightgray;
+    width: 30%;
+    height: 100px;
+    margin-bottom: 24px;
+}
+
+.box-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
