--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,13 @@
 .container {
     border: 4px solid lightgray;
     padding: 24px;
+    display: flex;
+    justify-content: center;
 }
 
 .row {
     width: 100%;
     max-width: 600px;
-    margin: 0 auto;
 }
 
 .title {
