--- a/styles.css
+++ b/styles.css
@@ -4,31 +4,34 @@
 
 .container {
     border: 4px solid lightgray;
-    padding: 24px;
-}
-
-.row {
-    width: 100%;
-    max-width: 600px;
-    margin: 0 auto;
-}
-
-.title {
-    border: 2px solid lightgray;
-    width: 100%;
-    height: 24px;
-    margin-bottom: 24px;
+    padding: 24px 24px 0 24px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .box {
     border: 4px solid lightgray;
-    width: 30%;
-    height: 100px;
     margin-bottom: 24px;
 }
 
-.box-wrapper {
+.box-small {
+    height: 50px;
+}
+
+.box-tiny {
+    width: 30%;
+    height: 50px;
+}
+
+.tiny-wrapper {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
+}
+
+.box-wrapper {
+    width: 45%;
+}
+
+.box-large {
+    width: 45%;
 }
