--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,12 @@
 .container {
     border: 4px solid lightgray;
     padding: 24px 24px 0 24px;
+}
+
+.row {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
 }
